# oil-well-labeling-agent

./: .env.example  .gitignore  README.md  label_csv.py  main.py  pyproject.toml  requirements.txt  server.py
adapters/: csv_adapter.py
agents/: discovery_agent.py  explanation_agent.py
app/: config.py  data_utils.py  llm_assistant.py  main.py  maintenance_utils.py  mistral_client.py  models.py  session_store.py  stat_analysis.py  task_manager.py
app/templates/: index.html
config/: settings.py  settings.yaml
config/prompts/: discovery_system.txt  explanation_system.txt  fact_extraction_system.txt  rule_draft_system.txt
context/: context_fact_extractor.py  semantic_retriever.py
core/: canonical_schema.py  pipeline_runner.py  policy_engine.py  state_manager.py  task_manager.py
data/review_labels/: Power_data.xlsx_17dc5d0e22834038a984e278222e60e6.json  Power_data.xlsx_a6a58b7efb7f4c158f9ae0a2dfb32746.json  (+4 more)
demo/: generate_data.py
docs/: data-summary.md  governance.md  product-proposal.md  system-design.md
docs/diagrams/: c4-component.md  (+4 more)
learning/: rule_miner.py  task_memory.py
observability/: evaluations.py  logger.py
oil_well_labeling_agent.egg-info/: SOURCES.txt  requires.txt
rules/: rule_engine.py  rule_registry.py  rule_schemas.py  starter_ruleset.py
scenarios/: amplitude_anomaly.yaml  belt_break.yaml
signals/: candidate_event_detector.py  global_series_profiler.py  historical_profile_builder.py  input_normalizer.py  local_segment_analyzer.py  signal_sanitizer.py
src/: orchestrator.py
static/: index.html
tests/: test_app_flow.py
(+70 files in other folders)
